# voice_type_rust

./: .gitignore  ASSET_SOURCES.md  Cargo.toml  README.md  package-lock.json  package.json
frontend/: index.html  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  HudApp.tsx  app.css  main.tsx  types.ts
frontend/src/components/: HistorySection.tsx  HudCard.tsx  HudStageSection.tsx  OnboardingOverlay.tsx  RuntimeMeter.tsx  controls.tsx  sections.tsx
frontend/src/hooks/: useAutosave.ts  useBackgroundImage.ts  useBoot.ts  useHotkeyCapture.ts  useRuntimePolling.ts  useUpdateCheck.ts
frontend/src/lib/: appearance.ts  config.ts  hotkeys.ts  hud.ts  options.ts
msix-output/staging/: AppxManifest.xml
scripts/: build-msix.ps1
src/: history.rs  lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  runtime.rs
src-tauri/src/commands/: background.rs  config.rs  hotkey.rs  misc.rs  mod.rs  update.rs
src-tauri/src/runtime/: bridges.rs  hud.rs  mod.rs  tray.rs
src/api/: constants.rs  grammar.rs  groq.rs  mod.rs  provider.rs
src/audio/: constants.rs  mod.rs  recorder.rs
src/config/: constants.rs  manager.rs  mod.rs
src/input/: handler.rs  mod.rs
src/processing/: mod.rs  numbers.rs  processor.rs  style.rs
src/tasks/: mod.rs  recording.rs
src/tasks/transcription/: mod.rs  processing.rs  request.rs
src/types/: api.rs  app.rs  audio.rs  config.rs  gui.rs  input.rs  mod.rs  processing.rs
