[package]
name = "voice_type"
version = "0.3.2"
edition = "2024"
authors = ["Anton AI Agent"]
description = "Hold SHIFT to speak, release to type. Fast voice-to-text using Groq Whisper API."
rust-version = "1.85"

[dependencies]
# Async runtime - latest Tokio with full features
tokio = { version = "1.43", features = ["full"] }

# Audio recording - cross-platform
cpal = "0.15"

# Global hotkeys and text typing
rdev = "0.5"

# HTTP client for API calls
reqwest = { version = "0.12", features = ["json", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Audio encoding (WAV)
hound = "3.5"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration directories
dirs = "6.0"

# Regex for text processing
regex = "1.11"
once_cell = "1.20"

# Clipboard access
arboard = "3.4"

# Async trait support
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
