[package]
name = "voice_type_tauri"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[lib]
name = "voice_type_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
single-instance = "0.3"
tauri = { version = "2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1.43", features = ["sync", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
voice_type = { path = ".." }
